Stop wrapping on code examples for better small screen display

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,13 @@ code {
 code {
   background-color: #f6e9d8;
 }
+pre {
+  word-wrap: inherit;
+  overflow-x: auto;
+}
+pre code {
+  white-space: pre;
+}
 
 
 /* Sidebar */
